--- a/frontend/src/components/BookForm/BookForm.css
+++ b/frontend/src/components/BookForm/BookForm.css
@@ -35,6 +35,7 @@
 .book-form .spinner {
   animation: spinner 1s infinite linear;
   margin-left: 10px;
+  font-size: 11px;
 }
 
 @keyframes spinner {
